--- a/angular-blog/src/app/post-page/post-page.component.html
+++ b/angular-blog/src/app/post-page/post-page.component.html
@@ -1,17 +1,20 @@
+<div *ngIf="post$ | async as post; else loading">
 <div class="post">
   <div class="header">
-    <h1>Post-Title</h1>
+    <h1>{{ post.title }}</h1>
 
     <button routerLink="/" class="btn btn-link">На главную</button>
   </div>
   <div class="info">
-    <strong>Тут автор</strong>
-    <small>12.09.2020</small>
+    <strong>{{post.author}}</strong>
+    <small>{{post.date | date:'medium':null:'ru'}}</small>
   </div>
   <div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cumque earum eos explicabo laborum, mollitia odio optio quia quo, tempora tenetur totam. A, animi blanditiis dolores doloribus ducimus eligendi eveniet excepturi explicabo fuga iure nemo nisi nostrum pariatur possimus quae quam sequi similique suscipit temporibus, tenetur, unde velit vero! Officia? </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cumque earum eos explicabo laborum, mollitia odio optio quia quo, tempora tenetur totam. A, animi blanditiis dolores doloribus ducimus eligendi eveniet excepturi explicabo fuga iure nemo nisi nostrum pariatur possimus quae quam sequi similique suscipit temporibus, tenetur, unde velit vero! Officia? </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cumque earum eos explicabo laborum, mollitia odio optio quia quo, tempora tenetur totam. A, animi blanditiis dolores doloribus ducimus eligendi eveniet excepturi explicabo fuga iure nemo nisi nostrum pariatur possimus quae quam sequi similique suscipit temporibus, tenetur, unde velit vero! Officia? </p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis cumque earum eos explicabo laborum, mollitia odio optio quia quo, tempora tenetur totam. A, animi blanditiis dolores doloribus ducimus eligendi eveniet excepturi explicabo fuga iure nemo nisi nostrum pariatur possimus quae quam sequi similique suscipit temporibus, tenetur, unde velit vero! Officia? </p>
-  </div>
+      <quill-view-html [content]="post.text"></quill-view-html>
+   </div>
 </div>
+</div>
+
+<ng-template #loading>
+  <p class="text-center">Загружаю пост</p>
+</ng-template>
